--- a/bio.html
+++ b/bio.html
@@ -56,7 +56,7 @@
 
 
 									<a class="image fit"><img src="images/dna.jpg"  alt="" /></a>
-									<a class="image fit"><img src="images/TechStack5.png"  alt="" /></a>
+									<img src="images/TechStack5.png" height="100%" width="100%" alt="" />
 
 
 									<p  style = "font-size: 1.25em"
