image cutoff resolved

--- a/bio.html
+++ b/bio.html
@@ -56,7 +56,7 @@
 
 
 									<a class="image fit"><img src="images/dna.jpg"  alt="" /></a>
-									<img src="images/TechStack5.png" height="100%" width="100%" alt="" />
+									<img src="images/perl_logo.png" style="height:300px;" width="70%" alt="" />
 
 
 									<p  style = "font-size: 1.25em"
